@@ -4,8 +4,9 @@
     * Oneshot connection mode is gone. It was a bad idea, torturously
       implemented.
 
-    * Improvements to timeout handling (no more local var creation and
-      time.Duration casting on every network operation).
+    * Improvements to timeout handling (func call eliminated; no more
+      local var creation and time.Duration casting on every network
+      operation).
 
 
 0.19.1 - 2015-12-10
